--- a/docker/mongo-seed/Dockerfile
+++ b/docker/mongo-seed/Dockerfile
@@ -1,6 +1,19 @@
 FROM mongo
 
-COPY init.csv /init.csv
-COPY entrypoint.sh /entrypoint.sh
+RUN apt update && apt install curl -y
 
-ENTRYPOINT ["/entrypoint.sh"]
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash -
+RUN apt update && apt install nodejs git -y 
+
+WORKDIR /app
+
+COPY scripts/wait-for-it.sh /app/wait-for-it.sh
+
+COPY scripts/init.sh /app/init.sh
+COPY scripts/seed-elasticsearch.js /app/seed-elasticsearch.js
+
+COPY dataset.csv /app/dataset.csv
+
+RUN chmod +x /app/init.sh
+
+CMD ["./wait-for-it.sh", "-t", "120", "mongodb:27017", "--", "bash", "/app/init.sh"]
