--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
+# MongoDB
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=password
 MONGO_INITDB_DATABASE=showcase
+# Elasticsearch
+ELASTICSEARCH_HOST=elasticsearch
+ELASTICSEARCH_PORT=9200
